# OpenGraphAU

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
opengraphau/: __init__.py  factory.py  inference.py  models.py  utils.py
opengraphau/model/: ANFL.py  MEFL.py  __init__.py  basic_block.py  graph.py  graph_edge_model.py  resnet.py  swin_transformer.py
